# QiVision

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  PROGRESS.md  README.md  README_CN.md  README_EN.md
samples/: 06_contour_segment.cpp  07_shape_match_draw.cpp  08_shape_match_large.cpp  09_performance_benchmark.cpp  CMakeLists.txt  README.md
samples/barcode/: barcode_read.cpp
samples/blob/: blob_analysis.cpp
samples/calib/: polar_transform_test.cpp
samples/color/: color_detect_demo.cpp
samples/core/: basic_image.cpp
samples/matching/: component_model_demo.cpp  fast_shape_match.cpp  fast_shape_match_gui.cpp  interactive_match.cpp  ncc_match.cpp  shape_match.cpp  shape_match_clip_gui.cpp  test_scaled_match.cpp
samples/measure/: caliper_circle_manual.cpp  caliper_pairs.cpp  circle_measure.cpp  circle_metrology.cpp  ellipse_fit_synthetic.cpp  line_metrology.cpp
samples/ocr/: ocr_demo.cpp  polar_ocr_circular_barcode.cpp
src/: CMakeLists.txt
src/Barcode/: Barcode.cpp
src/Blob/: Blob.cpp
src/CAPI/: QiVisionC.cpp
src/Calib/: CalibBoard.cpp  CameraCalib.cpp  CameraModel.cpp  CoordTransform2d.cpp  CoordTransform3d.cpp  FisheyeCalib.cpp  FisheyeModel.cpp  FisheyeUndistort.cpp  HandEyeCalib.cpp  MatchTransform.cpp  QHomMat3d.cpp  QPose.cpp  RobotTransform.cpp  StereoCalib.cpp  Undistort.cpp
src/Color/: ColorConvert.cpp  ColorDetect.cpp
src/Contour/: Contour.cpp
src/Core/: Draw.cpp  QContour.cpp  QContourArray.cpp  QImage.cpp  QMatrix.cpp  QRegion.cpp  Types.cpp
src/Defect/: VariationModel.cpp
src/Display/: Display.cpp  Draw.cpp
src/Edge/: Edge.cpp
src/Filter/: Filter.cpp
src/GUI/: Window.cpp
src/Hough/: Hough.cpp
src/IO/: ImageIO.cpp
src/Inference/: Inference.cpp
src/Internal/: AffineTransform.cpp  AnglePyramid.cpp  Canny.cpp  ConnectedComponent.cpp  ContourAnalysis.cpp  ContourConvert.cpp  ContourProcess.cpp  ContourSegment.cpp  ContourSelect.cpp  Convolution.cpp  CornerRefine.cpp  Distance.cpp  DistanceTransform.cpp  Edge1D.cpp  EdgeLinking.cpp  Eigen.cpp  Fitting.cpp  Gaussian.cpp  GeomConstruct.cpp  GeomRelation.cpp  Geometry2d.cpp  Gradient.cpp  Hessian.cpp  Histogram.cpp  Homography.cpp  Hough.cpp  IntegralImage.cpp  Intersection.cpp  LinemodPyramid.cpp  Matrix.cpp  MorphBinary.cpp  MorphGray.cpp  NonMaxSuppression.cpp  PolarTransform.cpp  Profiler.cpp  Pyramid.cpp  RLEOps.cpp  RegionFeatures.cpp  Solver.cpp  Steger.cpp  (+3 more)
src/Internal/archive/: LinemodPyramid.cpp  ResponseMap.cpp
src/Matching/: ComponentModel.cpp  ComponentModelImpl.h  FastShapeDetector.cpp  FastShapeModel.cpp  NCCModel.cpp  NCCModelCreate.cpp  NCCModelImpl.h  NCCModelScore.cpp  NCCModelSearch.cpp  ShapeModel.cpp  ShapeModelCreate.cpp  ShapeModelImpl.h  ShapeModelScore.cpp  ShapeModelSearch.cpp
src/Measure/: Caliper.cpp  CaliperArray.cpp  CaliperInternal.h  MeasureHandle.cpp  Metrology.cpp
src/Morphology/: Morphology.cpp
src/OCR/: OCR.cpp
src/Platform/: FileIO.cpp  Memory.cpp  Random.cpp  SIMD.cpp  Thread.cpp  Timer.cpp
src/Segment/: Segment.cpp
src/Texture/: Texture.cpp
src/Transform/: AffineTransform.cpp  Homography.cpp  PolarTransform.cpp
tests/: CMakeLists.txt  test_caliper.cpp  test_caliper_param_scan.cpp  test_caliper_regression.cpp  test_component_model.cpp  test_intensity_stats.cpp  test_ncc_match.cpp  test_ncc_serialization.cpp  test_scale_simple.cpp  test_scale_verify.cpp
tests/accuracy/: CaliperAccuracyTest.cpp  FittingAccuracyTest.cpp  ShapeModelAccuracyTest.cpp  SubPixelAccuracyTest.cpp
tests/data/fitting/: generate_fitting_test_data.py
tests/data/fitting/circle/: circle_r10_full_dense_noise0_offset00.json  circle_r10_full_dense_noise0_offset37.json  circle_r10_full_dense_noise0_offset73.json  circle_r10_full_dense_noise1_offset00.json  circle_r10_full_dense_noise1_offset37.json  circle_r10_full_dense_noise1_offset73.json  circle_r10_full_dense_noise2_offset00.json  circle_r10_full_dense_noise2_offset37.json  circle_r10_full_dense_noise2_offset73.json  circle_r10_full_dense_noise5_offset00.json  circle_r10_full_dense_noise5_offset37.json  circle_r10_full_dense_noise5_offset73.json  circle_r10_full_medium_noise0_offset00.json  circle_r10_full_medium_noise0_offset37.json  circle_r10_full_medium_noise0_offset73.json  circle_r10_full_medium_noise1_offset00.json  circle_r10_full_medium_noise1_offset37.json  circle_r10_full_medium_noise1_offset73.json  circle_r10_full_medium_noise2_offset00.json  circle_r10_full_medium_noise2_offset37.json  circle_r10_full_medium_noise2_offset73.json  circle_r10_full_medium_noise5_offset00.json  circle_r10_full_medium_noise5_offset37.json  circle_r10_full_medium_noise5_offset73.json  circle_r10_full_sparse_noise0_offset00.json  circle_r10_full_sparse_noise0_offset37.json  circle_r10_full_sparse_noise0_offset73.json  circle_r10_full_sparse_noise1_offset00.json  circle_r10_full_sparse_noise1_offset37.json  (+295 more)
tests/unit/: test_main.cpp
tests/unit/core/: test_contour.cpp  test_contour_array.cpp  test_matrix.cpp  test_types.cpp
tests/unit/internal/: test_affine_transform.cpp  test_canny.cpp  test_connected_component.cpp  test_contour_analysis.cpp  test_contour_convert.cpp  test_contour_process.cpp  test_contour_segment.cpp  test_contour_select.cpp  test_convolution.cpp  test_distance.cpp  test_distance_transform.cpp  test_edge1d.cpp  test_edgelinking.cpp  test_eigen.cpp  test_fitting.cpp  test_gaussian.cpp  test_geom_construct.cpp  test_geom_relation.cpp  test_geometry2d.cpp  test_gradient.cpp  test_hessian.cpp  test_histogram.cpp  test_homography.cpp  test_hough.cpp  test_internal_matrix.cpp  test_interpolate.cpp  test_intersection.cpp  test_morph_binary.cpp  test_morph_gray.cpp  test_nms.cpp  test_profiler.cpp  test_pyramid.cpp  test_region_features.cpp  test_rle_ops.cpp  test_solver.cpp  test_steger.cpp  test_struct_element.cpp  test_subpixel.cpp  test_threshold.cpp
tests/unit/matching/: test_shape_model.cpp
tests/unit/measure/: test_caliper.cpp  test_caliper_array.cpp  test_metrology.cpp
tests/unit/platform/: test_fileio.cpp  test_random.cpp  test_simd.cpp  test_thread.cpp  test_timer.cpp
(+409 files in other folders)
